# Instrument_Cluster_RPi

./: AnimationManager.qml  AntilagControl.qml  BrakeBias.qml  CMakeLists.txt  CMakeLists.txt.user.a3eef62  CMakeLists.txt.user.cd75447  CMakeLists.txt.user.f6c4daa  FlappyBird.qml  GameMenu.qml  InputManager.qml  LaunchAimControl.qml  LoadingScreen.qml  Main.qml  OptionsMenu.qml  PacMan.qml  Pong.qml  README.md  SplashScreen.qml  TractionControl.qml  VehicleInfoDisplay.qml  VehicleInfoDisplayExtraWidgets.qml  canmanager.cpp  canmanager.h  gpiohandler.cpp  gpiohandler.h  jsonmanager.cpp  jsonmanager.h  main.cpp  mapVals.h  shutdownhandler.h
scripts/: can-up.sh  startup.sh
